syntax = "proto3";

option java_package = "com.asivers.mycalendar.data";

message SavedSettings {
  string country = 1;
  string locale = 2;
  string theme = 3;
  string weekendMode = 4;
}
